--- a/BlogMaui/MainPage.xaml
+++ b/BlogMaui/MainPage.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BlogMaui.MainPage">
 
-    <VerticalStackLayout>
-        <Label Text="{Binding Message}" />
+    <VerticalStackLayout Margin="10">
+        <Label Text="{Binding Message}" FontSize="Large" />
         <ScrollView>
             <ListView ItemsSource="{Binding Posts}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Label Text="{Binding Title}" />
+                            <Label Text="{Binding Title}" FontSize="Medium" />
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
