--- a/BlogMaui/MainPage.xaml
+++ b/BlogMaui/MainPage.xaml
@@ -5,8 +5,7 @@
 
     <VerticalStackLayout Margin="10">
         <Label Text="{Binding Message}" FontSize="Large" />
-        <ActivityIndicator IsRunning="{Binding Loading}" IsVisible="{Binding Loading}" />
-        <RefreshView Command="{Binding Refresh}" IsRefreshing="{Binding Refreshing}">
+        <RefreshView Command="{Binding Refresh}" IsRefreshing="{Binding Loading}">
             <ScrollView>
                 <ListView ItemsSource="{Binding Posts}">
                     <ListView.ItemTemplate>
