--- a/BlogMaui/MainPage.xaml
+++ b/BlogMaui/MainPage.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BlogMaui.MainPage">
 
-    <VerticalStackLayout Margin="10">
-        <Label Text="{Binding Message}" FontSize="Large" />
-        <RefreshView Command="{Binding Refresh}" IsRefreshing="{Binding Loading}">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" Text="{Binding Message}" FontSize="Large" />
+        <RefreshView Grid.Row="1" Command="{Binding Refresh}" IsRefreshing="{Binding Loading}">
             <ScrollView>
                 <ListView ItemsSource="{Binding Posts}">
                     <ListView.ItemTemplate>
@@ -18,7 +23,9 @@
                 </ListView>
             </ScrollView>
         </RefreshView>
-        <Button Text="Refresh" Command="{Binding Refresh}" />
-    </VerticalStackLayout>
+        <HorizontalStackLayout Grid.Row="2">
+            <Button Text="Refresh" Command="{Binding Refresh}" />
+        </HorizontalStackLayout>
+    </Grid>
 
 </ContentPage>
