--- a/BlogMaui/AppShell.xaml
+++ b/BlogMaui/AppShell.xaml
@@ -4,11 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BlogMaui"
+    xmlns:authentication="clr-namespace:BlogMaui.Authentication"
     Shell.FlyoutBehavior="Disabled">
+
+    <ShellContent
+        Title="Gatekeeper"
+        ContentTemplate="{DataTemplate authentication:GatekeeperPage}"
+        Route="gatekeeper" />
 
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="main" />
 
 </Shell>
