--- a/BlogMaui/AppShell.xaml
+++ b/BlogMaui/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BlogMaui"
     xmlns:authentication="clr-namespace:BlogMaui.Authentication"
+    xmlns:visitor="clr-namespace:BlogMaui.Visitor"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
@@ -12,9 +13,23 @@
         ContentTemplate="{DataTemplate authentication:GatekeeperPage}"
         Route="gatekeeper" />
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="main" />
+    <TabBar IsVisible="{Binding NotLoggedIn}"
+            Route="notloggedin">
+        <Tab Title="Visitor"
+             Route="visitor">
+            <ShellContent
+                Title="Visitor"
+                ContentTemplate="{DataTemplate visitor:VisitorPage}" />
+        </Tab>
+    </TabBar>
 
+    <TabBar IsVisible="{Binding LoggedIn}"
+            Route="loggedin">
+        <Tab Title="Home"
+             Route="main">
+            <ShellContent
+                Title="Home"
+                ContentTemplate="{DataTemplate local:MainPage}" />
+        </Tab>
+    </TabBar>
 </Shell>
