--- a/BlogMaui/Visitor/VisitorPage.xaml
+++ b/BlogMaui/Visitor/VisitorPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BlogMaui.Visitor.VisitorPage"
-             Title="VisitorPage">
+             Title="Visitor">
     <VerticalStackLayout VerticalOptions="Center"
                          HorizontalOptions="Center">
         <Button Text="Log In"
