--- a/BlogMaui/Visitor/VisitorPage.xaml
+++ b/BlogMaui/Visitor/VisitorPage.xaml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:root="clr-namespace:BlogMaui"
              x:Class="BlogMaui.Visitor.VisitorPage"
              Title="Visitor">
     <VerticalStackLayout VerticalOptions="Center"
                          HorizontalOptions="Center">
         <Button Text="Log In"
-                Command="{Binding LogIn}"
+                Command="{Binding LogIn, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}"
                 HorizontalOptions="Center" />
 
-        <Label Text="{Binding Error}" />
+        <Label Text="{Binding Error, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}" />
     </VerticalStackLayout>
 </ContentPage>
