--- a/BlogMaui/Blog/PostListPage.xaml
+++ b/BlogMaui/Blog/PostListPage.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:root="clr-namespace:BlogMaui"
              x:Class="BlogMaui.Blog.PostListPage">
 
-    <Grid Margin="10">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -24,7 +23,6 @@
         <ActivityIndicator Grid.Row="2" IsVisible="{Binding Loading}" IsRunning="{Binding Loading}" Margin="10" />
         <HorizontalStackLayout Grid.Row="3">
             <Button Text="Refresh" Command="{Binding Refresh}" Margin="10" />
-            <Button Text="Log Out" Command="{Binding LogOut, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}" Margin="10" />
         </HorizontalStackLayout>
     </Grid>
 
