--- a/BlogMaui/Blog/PostListPage.xaml
+++ b/BlogMaui/Blog/PostListPage.xaml
@@ -4,13 +4,7 @@
              x:Class="BlogMaui.Blog.PostListPage"
              Title="Posts">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <Grid RowDefinitions="Auto,*,Auto,Auto">
         <Label Grid.Row="0" Text="{Binding Status}" FontSize="Large" Margin="15,5" />
         <ScrollView Grid.Row="1">
             <ListView ItemsSource="{Binding Posts}">
