--- a/BlogMaui/AppShell.xaml
+++ b/BlogMaui/AppShell.xaml
@@ -4,12 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BlogMaui"
-    xmlns:account="clr-namespace:BlogMaui.Account"
+    xmlns:account="clr-namespace:BlogMaui.Areas.Account"
     xmlns:authentication="clr-namespace:BlogMaui.Authentication"
     xmlns:binding="clr-namespace:BlogMaui.Binding"
-    xmlns:blog="clr-namespace:BlogMaui.Blog"
+    xmlns:blog="clr-namespace:BlogMaui.Areas.Blog"
     xmlns:fonts="clr-namespace:BlogMaui.Fonts"
-    xmlns:visitor="clr-namespace:BlogMaui.Visitor"
+    xmlns:visitor="clr-namespace:BlogMaui.Areas.Visitor"
     Shell.FlyoutBehavior="Disabled">
 
     <Shell.Resources>
