--- a/BlogMaui/Areas/Account/AccountPage.xaml
+++ b/BlogMaui/Areas/Account/AccountPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:root="clr-namespace:BlogMaui"
-             x:Class="BlogMaui.Account.AccountPage"
+             x:Class="BlogMaui.Areas.Account.AccountPage"
              Title="Account">
     <Grid RowDefinitions="*,Auto">
         <Label Text="This page should show information about the user's account."
