--- a/BlogMaui/Areas/Visitor/LoginPage.xaml
+++ b/BlogMaui/Areas/Visitor/LoginPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:root="clr-namespace:BlogMaui"
-             x:Class="BlogMaui.Visitor.LoginPage"
+             x:Class="BlogMaui.Areas.Visitor.LoginPage"
              Title="Log In">
     <VerticalStackLayout VerticalOptions="Center"
                          HorizontalOptions="Center">
