--- a/BlogMaui/Areas/Account/AccountPage.xaml
+++ b/BlogMaui/Areas/Account/AccountPage.xaml
@@ -5,7 +5,7 @@
              x:Class="BlogMaui.Areas.Account.AccountPage"
              Title="Account">
     <Grid RowDefinitions="*,Auto">
-        <Label Text="This page should show information about the user's account."
+        <Label Text="{Binding UserName}"
                FontSize="Medium"
                Margin="10" />
         <HorizontalStackLayout Grid.Row="1">
