--- a/BlogMaui/Areas/Blog/Sites/SiteListPage.xaml
+++ b/BlogMaui/Areas/Blog/Sites/SiteListPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BlogMaui.Areas.Blog.Sites.SitePage"
+             x:Class="BlogMaui.Areas.Blog.Sites.SiteListPage"
              xmlns:fonts="clr-namespace:BlogMaui.Fonts"
              Title="Sites">
 </ContentPage>
