--- a/BlogMaui/Areas/Visitor/LoginPage.xaml
+++ b/BlogMaui/Areas/Visitor/LoginPage.xaml
@@ -6,14 +6,37 @@
              Title="Log In">
     <VerticalStackLayout VerticalOptions="Center"
                          HorizontalOptions="Center">
-        <Button Text="Log In with Apple"
-                Command="{Binding LogIn, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}"
-                CommandParameter="Apple"
-                HorizontalOptions="Center" />
-        <Button Text="Log In with Google"
-                Command="{Binding LogIn, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}"
-                CommandParameter="Google"
-                HorizontalOptions="Center" />
+        <Grid RowDefinitions="Auto,Auto" RowSpacing="20">
+
+            <Button Grid.Row="0"
+                    Text="Log In with Apple"
+                    Command="{Binding LogIn, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}"
+                    CommandParameter="Apple"
+                    HorizontalOptions="FillAndExpand"
+                    TextColor="{AppThemeBinding Light=Black, Dark=White}"
+                    BorderColor="{AppThemeBinding Light=Black, Dark=White}"
+                    BorderWidth="1"
+                    BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
+                    ImageSource="{AppThemeBinding Light=apple_logo_black.png, Dark=apple_logo_white.png}"
+                    ContentLayout="Right,20"
+                    HeightRequest="40"
+                    WidthRequest="200" />
+
+            <Button Grid.Row="1"
+                    Text="Log In with Google"
+                    Command="{Binding LogIn, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}"
+                    CommandParameter="Google"
+                    HorizontalOptions="FillAndExpand"
+                    TextColor="{AppThemeBinding Light=Black, Dark=White}"
+                    BorderColor="{AppThemeBinding Light=Black, Dark=White}"
+                    BorderWidth="1"
+                    BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
+                    ImageSource="google_logo.png"
+                    ContentLayout="Right,20"
+                    HeightRequest="40"
+                    WidthRequest="200">
+            </Button>
+        </Grid>
 
         <Label Text="{Binding Error, Source={RelativeSource Mode=FindAncestorBindingContext, AncestorType={x:Type root:AppShellViewModel}}}" />
     </VerticalStackLayout>
